# skills-python-refactor

./: .gitignore  CLAUDE.md  README.md  SKILL.md  absolutize.md  add_imports.md  add_param_annotations.md  annotations.md  custom_scripts.md  deexport.md  imports.md  module_to_package.md  move_globals.md  move_module.md  rename_module.md  rename_symbol.md  rope-api.md
scripts/: absolutize.py  add_imports.py  add_param_annotations.py  deexport.py  module_to_package.py  move_globals.py  move_module.py  pyproject.toml  refactor_history.py  rename_module.py  rename_symbol.py  rope_bootstrap.py
scripts/tests/: conftest.py  test_absolutize.py  test_add_imports.py  test_add_param_annotations.py  test_bootstrap.py  test_deexport.py  test_find_files.py  test_format_diff.py  test_idiomatic_layout.py  test_module_to_package.py  test_move_globals.py  test_move_module.py  test_move_support.py  test_overlay_fs.py  test_refactor_history.py  test_rename_module.py  test_rename_symbol.py  test_rope_bootstrap.py
scripts/tests/fixtures/fixture-add-imports/: pyproject.toml  test_already_imported.py  test_mark.py  test_needs_import.py  test_other_attr.py
scripts/tests/fixtures/fixture-annotations/: helper.py  pyproject.toml  test_already_annotated.py  test_async.py  test_both.py  test_builtin.py  test_capsys.py  test_exclude_me.py  test_existing_import.py  test_nested.py  test_non_matching.py  test_tmp_path.py
scripts/tests/fixtures/fixture-deexport/: pyproject.toml
scripts/tests/fixtures/fixture-idiomatic-layout/: pyproject.toml
scripts/tests/fixtures/fixture-move/: pyproject.toml
(+39 files in other folders)
